# Shark_Tank_Simlation

shark_tank/: README.md  config_env.py  crewai_flow.html  demo_sessions.py  manage_sessions.py  pyproject.toml  quick_start.py  requirements.txt  setup_database.py  test_database.py  view_sessions.py
shark_tank/src/shark_tank/: crew.py  database.py  main.py  session_manager.py
shark_tank/src/shark_tank/config/: agents.yaml  database.yaml  tasks.yaml
